Fixed up comments section and fixed bootstrap collapse to be active on individual comments section

--- a/chatsystem/static/chatting/style.css
+++ b/chatsystem/static/chatting/style.css
@@ -52,3 +52,6 @@ a:hover {
     height: 200;
 } */
 
+.no-comments {
+    margin: 0 auto;
+}
